# esppdp

./: .gitignore  README.md
boards/Sunton_2832S028/: README.md
boards/Sunton_2832S028/case/: 2432S028.FCStd  2432S028_Bezel.FCStd  2432S028_Pin_Boot.stl  2432S028_Pin_Reset.stl  2432S028_USB.stl  2432S028_inner.FCStd  2432S028_inner.stl  2432S028_inner_03.FCStd  2432S028_outer.stl  2432S028_pins.FCStd  Bezel_2432S028.stl  MicroSD_2432S028.stl
firmware/: .gitignore  CMakeLists.txt  README.md  sdkconfig
firmware/components/boards/: CMakeLists.txt  hw_2432S028.h  hw_final.h  hw_wrover.h
firmware/components/hid_server/: CMakeLists.txt  hci_server.cpp  hci_transport_esp32.cpp  hid_server.cpp
firmware/components/ie15term/: CMakeLists.txt  ie15lcd.c
firmware/main/: Kconfig.projbuild  bthid.c  main.c  pdp11_cpu.c  pdp11_defs.h  sim_defs.h  wifi_if_esp32.c  wifid.c
