
idf_component_register(SRCS "ie15lcd.c"
                    INCLUDE_DIRS "."  "C:/Espressif/frameworks/esp-idf-v5.0.1/components/nvs_flash/include" "C:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_ringbuf/include" "C:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/include" "C:/Espressif/frameworks/esp-idf-v5.0.1/components/vfs/include"
                    EMBED_FILES chargen.bin)

